About page removed, project page added, home page set up as new about page, portfolio items moved to project page with size/spacing fixed.

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@ body {
 
 }
 
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+.brand {
+    font-size: 50px;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -12,16 +21,13 @@ body {
 /* Nav Styles */
 .nav-wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 30px;
 }
 
-.left-side {
-    display: flex;
-}
-
-.nav-wrapper > .left-side > div {
+.nav-wrapper > div {
     margin-right: 20px;
+    margin-left: 20px;
     font-size: 0.9em;
 }
 
@@ -54,14 +60,21 @@ body {
 
 .portfolio-item-wrapper {
     position: relative;
+    height: 350px;
+    width: 100%;
 }
 
 .portfolio-img-background {
-    height: 350px;
-    width: 100%;
-    background-size: cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 1%;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    background-origin:content-box;
 }
 
 .img-text-wrapper {
@@ -81,13 +94,23 @@ body {
 
 .img-text-wrapper .title-wrapper {
     transition: 1s;
+    color: white;
+}
+
+.img-text-wrapper .subtitle-wrapper {
+    transition: 1s;
     font-weight: 600;
     color: transparent;
 }
 
 .img-text-wrapper:hover .title-wrapper {
     font-weight: 600;
-    color: lawngreen;
+    color: steelblue;
+}
+
+.img-text-wrapper:hover .subtitle-wrapper {
+    font-weight: 600;
+    color: slategray;
 }
 
 .img-darken {
